<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GLORIA Solar Activity Experiment</string>
    <string name="action_settings">Settings</string>
    <string name="usernameTitle">User name:</string>
    <string name="usernameHint">Username</string>
    <string name="passwordTitle">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="remembermeTitle">Remember me</string>
    <string name="loginBtn">Log in</string>
    <string name="register"><a href="http://users.gloria-project.eu/home?p_p_id=58&amp;p_p_lifecycle=0&amp;p_p_state=maximized&amp;p_p_mode=view&amp;p_p_col_id=column-2&amp;p_p_col_count=2&amp;saveLastPath=0&amp;_58_struts_action=%2Flogin%2Fcreate_account">Register</a></string>
    
    <string name="informationTitle">Information</string>
    <string name="loginInfo">This application was created by GLORIA for its users to test our funny experiments. Visit us on http://gloria-project.eu/</string>
    
    <string name="experimentsTitle">GLORIA Solar Activity Experiment</string>
    <string name="wolfExperiment">Detect sunspots</string>
    <string name="asteroidsExperiment">Find asteroids</string>
    <string name="unimplementedExperimentMsg">Unimplemented experiment</string>
	
    <string name="instructionsText">Welcome to the GLORIA Solar Activity Experiment!\n\nHelp us to study the solar activity by counting sunspots (dark spots on solar surface). First mark a group, after count the number of individual sunspots. It is very important to mark all sunspot groups on solar surface. The total number of sunspots determines the Wolf Number related with solar activity, and it\'s very important for solar research. The sun is currently at the maximum of its 11 year cycle so your help is crucial to understand sun evolution.\n\nJust select a date to get sun images for that day, and start contributing!</string>
    
    <string name="wolfText">Wolf Number: R =&#160;</string>
    <string name="defaultDate">Date</string>
    <string name="deleteBtn">Delete</string>
    <string name="increaseBtn">Increase</string>
    <string name="decreaseBtn">Decrease</string>
    <string name="nextBtn">Next</string>
    <string name="cancelBtn">Cancel</string>
    
    
    <string name="authenticatingMsg">Authenticating &#8230;</string>
    <string name="defaultErrorMsg">Unexpected error</string>
    <string name="wrongLoginMsg">Invalid username or password</string>
    <string name="noInternetMsg">Server unreachable (Please check your Internet connection)</string>
    <string name="noAccessMsg">Cannot access the server: </string>
    
    
    <string name="requestingAccess">Requesting access to experiment...</string>
    <string name="selectDateMsg">Select a date</string>
    <string name="noImagesForThisDateMsg">There are no images for that date</string>
    <string name="gettingImageMsg">Getting new image &#8230;</string>
    <string name="sendingResultsMsg">Sending results &#8230;</string>
    
    
    <string name="newImageMsg">Image #</string>
    <string name="noMoreImagesMsg">There are no more images for this day</string>
    <string name="loadingImageMsg">Loading image &#8230;</string>
    <string name="loadingIDsMsg">Getting images &#8230;</string>
    <string name="zoomsMsg">You can zoom with two fingers</string>
    <string name="markPinMsg">Mark a sunspot group by clicking on it</string>
    <string name="sunspotNumberMsg">Indicate the number of individual sunspots with the increase and decrease buttons</string>
    <string name="acceptBtn">Accept</string>
    <string name="tutorialTitle">Instructions</string>
    
    
    <string name="sendResultsTitle">Wolf experiment</string>
    <string name="sendResultsMsg">Do you want to send results for this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sevenCapLogo">Seven Capacities CORDIS</string>
    <string name="euLogo">European Union</string>
    
    
</resources>